<package>
  <name>omip_launch</name>
  <version>1.0.0</version>
  <description>
  This package only contains launch files for the complete OMIP system.
  </description>
  <maintainer email="roberto.martinmartin@tu-berlin.de">Roberto Martin Martin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>omip</run_depend>
  <run_depend>feature_tracker</run_depend>
  <run_depend>rb_tracker</run_depend>
  <run_depend>f_and_rb_tracker</run_depend>
  <run_depend>joint_tracker</run_depend>

</package>
