<package>
  <name>rb_tracker</name>
  <version>1.0.0</version>
  <description>
    Tracker of rigid bodies using visual features and/or shape-based poses (extensible to use other modalities as source of information)
  </description>

  <license>MIT</license>
  <author>Roberto Martín-Martín</author>
  <maintainer email="roberto.martinmartin@tu-berlin.de">Roberto Martín-Martín</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>omip_common</build_depend>
  <build_depend>omip_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>cv_bridge</build_depend> 
  <build_depend>pcl</build_depend> 
  <build_depend>pcl_ros</build_depend> 
  <build_depend>pcl_conversions</build_depend>
  <build_depend>message_filters</build_depend> 
  <build_depend>rosbag</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>  
  <build_depend>std_srvs</build_depend> 
  <build_depend>nodelet</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>lgsm</build_depend>
  <build_depend>uncalibrated_servoing_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>omip_common</run_depend>
  <run_depend>omip_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>cv_bridge</run_depend> 
  <run_depend>pcl</run_depend> 
  <run_depend>pcl_ros</run_depend> 
  <run_depend>pcl_conversions</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>  
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend> 
  <run_depend>nodelet</run_depend> 
  <run_depend>lgsm</run_depend>
  <run_depend>uncalibrated_servoing_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>

</package>
